--- a/build.gradle
+++ b/build.gradle
@@ -27,5 +27,8 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
 
+    compile("io.springfox:springfox-swagger2:2.9.2")
+    compile('io.springfox:springfox-swagger-ui:2.9.2')
+
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
